[tool.poetry]
name = "script-py"
version = "0.1.0"
description = ""
authors = ["dengxiaojun <dxj1718874198@gmail.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.6.1"
PyYAML = "^6.0"
plotly = "^5.15.0"
pandas = "1.1.5"
xlrd = "1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
script-py = "script_py.Application:Application.run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
